@@ -13,7 +13,7 @@
 # Copyright:: Copyright (c) 2013-2014 Snowplow Analytics Ltd
 # License:: Apache License Version 2.0
 
-require 'net/http'
+require 'net/https'
 require 'set'
 require 'logger'
 require 'contracts'
@@ -156,7 +156,12 @@ module SnowplowTracker
       destination = URI(@collector_uri + '?' + URI.encode_www_form(payload))
       LOGGER.info("Sending GET request to #{@collector_uri}...")
       LOGGER.debug("Payload: #{payload}")
-      response = Net::HTTP.get_response(destination)
+      http = Net::HTTP.new(destination.host, destination.port)
+      request = Net::HTTP::Get.new(destination.request_uri)
+      if destination.scheme == 'https'
+        http.use_ssl = true
+      end
+      response = http.request(request)
       LOGGER.add(response.code == '200' ? Logger::INFO : Logger::WARN) {
         "GET request to #{@collector_uri} finished with status code #{response.code}"
       }
@@ -173,6 +178,10 @@ module SnowplowTracker
       destination = URI(@collector_uri)
       http = Net::HTTP.new(destination.host, destination.port)
       request = Net::HTTP::Post.new(destination)
+      request = Net::HTTP::Post.new(destination.request_uri)
+      if destination.scheme == 'https'
+        http.use_ssl = true
+      end
       request.form_data = payload
       request.set_content_type('application/json; charset=utf-8')
       response = http.request(request)
